# ConsistentPanopticSLAM

./: .gitignore  .gitmodules  README.md  requirements.txt
mapping_ros_ws/src/: .rosinstall  .rosinstall.bak
mapping_ros_ws/src/consistent_panoptic_mapping/: .gitmodules  consistent_panoptic_mapping.rosinstall
mapping_ros_ws/src/consistent_panoptic_mapping/consistent_gsm/: CMakeLists.txt  package.xml  ungraceful_changes.md
mapping_ros_ws/src/consistent_panoptic_mapping/consistent_gsm/cvnp/: CMakeLists.txt
mapping_ros_ws/src/consistent_panoptic_mapping/consistent_gsm/include/consistent_mapping/: SettingsSemantic.h  consistent_gsm_mapper.h  global_segment_map_py.h  label_tsdf_confidence_integrator.h  segment_confidence.h  virtual_memory_log.h
mapping_ros_ws/src/consistent_panoptic_mapping/consistent_gsm/include/utils/: camera_ray_generator.h  pcl_semantic_visualizers.h  semantics_metadata.h
mapping_ros_ws/src/consistent_panoptic_mapping/consistent_gsm/src/: SettingsSemantic.cpp  consistent_gsm_mapper.cpp  global_segment_map_py.cpp  hello_world.cpp  label_tsdf_confidence_integrator.cpp  segment_confidence.cpp
mapping_ros_ws/src/consistent_panoptic_mapping/depth_segmentation_py/: CMakeLists.txt  package.xml  setup.py
mapping_ros_ws/src/consistent_panoptic_mapping/depth_segmentation_py/include/depth_segmentation_py/: depth_segmentation_py.h
mapping_ros_ws/src/consistent_panoptic_mapping/depth_segmentation_py/scripts/: segmentation_test.ipynb  segmentation_test.py
mapping_ros_ws/src/consistent_panoptic_mapping/depth_segmentation_py/src/: depth_segmentation_py.cpp  depth_segmentation_py_previous.cpp
mapping_ros_ws/src/consistent_panoptic_mapping/global_segment_map/: CMakeLists.txt  package.xml
mapping_ros_ws/src/consistent_panoptic_mapping/global_segment_map/include/global_segment_map/: common.h  label_tsdf_integrator.h  label_tsdf_map.h  label_voxel.h  segment.h  segment_graph.h  semantic_instance_label_fusion.h
mapping_ros_ws/src/consistent_panoptic_mapping/global_segment_map/include/global_segment_map/meshing/: instance_color_map.h  label_color_map.h  label_tsdf_mesh_integrator.h  semantic_color_map.h
mapping_ros_ws/src/consistent_panoptic_mapping/global_segment_map/include/global_segment_map/utils/: map_utils.h  meshing_utils.h  visualizer.h
mapping_ros_ws/src/consistent_panoptic_mapping/global_segment_map/src/: label_merge_integrator.cc  label_tsdf_integrator.cc  segment.cc  segment_graph.cpp  semantic_instance_label_fusion.cc
mapping_ros_ws/src/consistent_panoptic_mapping/global_segment_map/src/meshing/: label_tsdf_mesh_integrator.cc  semantic_color_map.cc
mapping_ros_ws/src/consistent_panoptic_mapping/global_segment_map/src/utils/: visualizer.cc
mapping_ros_ws/src/consistent_panoptic_mapping/global_segment_map_node/: package.xml
mapping_ros_ws/src/consistent_panoptic_mapping/global_segment_map_py/: CMakeLists.txt  package.xml
mapping_ros_ws/src/consistent_panoptic_mapping/opencv3_catkin/: CMakeLists.txt
mapping_ros_ws/src/consistent_panoptic_mapping/pcl_catkin/: README.md
mapping_ros_ws/src/orbslam_semantic/: CMakeLists.txt  package.xml
mapping_ros_ws/src/orbslam_semantic/examples/: orbslam.yaml  orbslam_debug.yaml  orbslam_insconv.yaml  orbslam_python.yaml  rgbd_INSCONV  rgbd_ins_conv.cc  rgbd_scannet  rgbd_scannet.cc  rgbd_sceneNN  rgbd_sceneNN.cc  semantic_mapping.yaml  semantic_mapping_debug.yaml  semantic_mapping_python.yaml  semantic_rgbd_scannet  semantic_rgbd_scannet.cc
mapping_ros_ws/src/orbslam_semantic/include/: Frame.h  Optimizer.h  Settings.h  System.h  Tracking.h
mapping_ros_ws/src/orbslam_semantic/include/SemanticAided/: SystemSemantic.h  TrackingRGBDSemantics.h
mapping_ros_ws/src/orbslam_semantic/scripts/: parallel_semantic_orbslam.py  semantic_orbslam.sh  transform_traj_to_eval.py
mapping_ros_ws/src/orbslam_semantic/scripts/OrbSlamForINSCONV/: orbslam_INSCONV.sh  test_orbslam_scannet.sh  traj_orbslamToScanNet.py  traj_orbslam_to_log.ipynb
mapping_ros_ws/src/orbslam_semantic/scripts/OrbSlamForScanNet/: UncertaintyCheck.ipynb  orbslam_scannet.sh  parallel_orbslam.py
mapping_ros_ws/src/orbslam_semantic/scripts/OrbSlamForSceneNN/: orbslam_sceneNN.sh  parallel_orbslam_sceneNN.py  traj_orbslamToScanNet.py
mapping_ros_ws/src/orbslam_semantic/src/: Optimizer_modified.cc  Settings.cc  System.cc  Tracking.cc
mapping_ros_ws/src/orbslam_semantic/src/SemanticAided/: SystemSemantic.cpp  TrackingRGBDSemantics.cpp
scripts/: consistent_panoptic_mapping.sh  launch_pg_seg_server.sh  panoptic_mapping_.py  post_refinement.sh  semantic_graphcut_refine_tune.py
scripts/evaluation/: GeoSemEval.py  GeoSemEvalBatch.py  GeoSemEvalBatchFix.py  GeoSemEvalBatchStatistics.py  GeoSemEvalSegGraph.py  GeoSemEvalShell.sh  GeoSemEvalShellGraphCut.sh  GeoSemEvalShellPano.sh  GeoSemEvalShellSegGraph.sh  PlotMetric.py
scripts/evaluation/GeometricEvaluation/: geo_utils.py
scripts/evaluation/SemanticEvaluation/: color_maps.py  evaluate_semantic_instance_my.py  evaluate_semantic_instance_my_previous.py  pano_colormap.py  sem_utils.py  util_3d.py
scripts/semantics/: cate_id_info.pkl  general_color_map.py  pano_colormap.py  pano_scannet_colormap.py  pano_scannet_nyu_colormap.py  semantic_utils.py  tcp_utils.py
scripts/semantics/rp_server/: Mask2Former_scannet.yaml  launch_mask2former_server.py
scripts/semantics/rp_server/rp_server/: __init__.py  mask2former_server.py  mask2former_wrapper.py  utils.py
scripts/semantics/rp_server/rp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/utils/: common.py  common_run_analysis.py  common_scannet.py  common_scannet_nyu.py  common_scannet_nyu_archive.py  common_scannet_nyu_depthpixels.py  common_scannet_nyu_pose_confidence.py  common_scenenn.py
scripts/utils/segment_graph/: inst_graph_cut.py  seg_graph.py  seg_graph_prev.py  seg_graph_tune.py  seg_graph_tune_specific.py  semantic_graph_cut.py  utils.py
scripts/utils/segment_graph/test/: containerTest.ipynb  loadSegGraph.ipynb  loadSegGraph.py  loadSegGraph_prev.ipynb
(+40 files in other folders)
