<?xml version="0.0.1"?>
<package format="2">
  <name>depth_segmentation_py</name>
  <version>0.0.0</version>
  <description>A package for segmentation using depth images.</description>

  <maintainer email="yangmiao@student.ethz.ch">Yang Miao</maintainer>

  <license>BSD 3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>depth_segmentation</depend>
  <depend>opencv3_catkin</depend>
  <!-- <depend>pybind11_catkin</depend> -->
</package>
